refactor Partial Result to be GADT

--- a/package.yaml
+++ b/package.yaml
@@ -18,6 +18,8 @@ library:
   ghc-options: -Werror
   exposed-modules:
   - Std.Literal
+  - Std.Group
+  - Std.Bool
   - Std.Debug
   - Std.Partial
   default-extensions:
