refactored category stuff in multiple files

--- a/package.yaml
+++ b/package.yaml
@@ -29,6 +29,7 @@ library:
   - ImportQualifiedPost
   - PackageImports
   # syntax
+  - RebindableSyntax
   - ScopedTypeVariables
   - TypeApplications
   - LambdaCase
