moved InverseOp up one layer

--- a/package.yaml
+++ b/package.yaml
@@ -39,6 +39,7 @@ library:
   - GeneralizedNewtypeDeriving
   - DeriveGeneric
   - DerivingVia
+  - DeriveDataTypeable
   # type stuff
   - TypeOperators
   - TypeFamilies
