--- a/package.yaml
+++ b/package.yaml
@@ -7,6 +7,7 @@ ghc-options: -Wall
 
 dependencies:
 - base
+- containers
 - ghc-prim
 - template-haskell
 - deepseq
@@ -30,6 +31,7 @@ library:
   - PackageImports
   # syntax
   - RebindableSyntax
+  - TupleSections
   - ScopedTypeVariables
   - TypeApplications
   - LambdaCase
